# raspberry_pico

cnc/: gcodeSender.py  main.py  serial_loopback.py  utils.py
cnc_/cnc/: gcodeSender.py  main.py  readSerial.py
cnc_/testing_stepper/: library.py
cnc_windows/: circle_0004.ngc  gcodeSender.py  main.py  testSerial.py
drone/: TODO
drone_default_lib/: CMakeLists.txt
drone_default_lib/drone_project/: CMakeLists.txt  pins.h  receiver.cpp  receiver_util.cpp  receiver_util.h  sensor.h  transmitter.cpp  transmitter_util.cpp  transmitter_util.h  utility.cpp  utility.h
drone_default_lib/drone_project/receiver/: CMakeLists.txt  receiver.cpp
drone_default_lib/drone_project/transmitter/: CMakeLists.txt  transmitter.cpp
drone_default_lib/lib/: CMakeLists.txt
drone_default_lib/lib/esc/: CMakeLists.txt  esc.cpp  esc.h
drone_default_lib/lib/joystick/: CMakeLists.txt  joystick.cpp  joystick.hpp
drone_default_lib/lib/mpu6050/: CMakeLists.txt  mpu6050_driver.cpp  mpu6050_driver.h  mpu6050_driver.hpp
drone_default_lib/lib/nrf24l01/: CMakeLists.txt  nrf24_driver.cpp  nrf24_driver.h  nrf24_pin_config.h
gcodes/: HowToCreateGcode.txt  circle_0001.ngc  circle_0002.ngc  circle_0003.ngc  circle_0004.ngc
testing_servo/: servo.py
testing_stepper/: stepper.py
